# mint-mobile-app-ncuwqw

./: .gitignore  LICENSE  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  deploy-production.yml  deploy-staging.yml  ios-ci.yml  web-ci.yml
documentation/: Input Prompt.md  Project Guide.md  Software Requirements Specifications (SRS).json  Software Requirements Specifications (SRS).md  Technical Specifications.md
infrastructure/docs/: architecture.md  deployment.md  disaster-recovery.md  monitoring.md  security.md
infrastructure/docs/runbooks/: backup-restore.md  incident-response.md  scaling.md  troubleshooting.md
infrastructure/helm/backend/: Chart.yaml  values.yaml
infrastructure/helm/web/: Chart.yaml  values.yaml
infrastructure/scripts/: backup-db.sh  restore-db.sh  rotate-secrets.sh  setup-logging.sh  setup-monitoring.sh  setup-tracing.sh
infrastructure/terraform/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
src/backend/: .dockerignore  .env.example  .flaskenv  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  gunicorn.conf.py  mypy.ini  pyproject.toml  requirements.txt  setup.py
src/backend/app/: __init__.py  config.py  constants.py  wsgi.py
src/backend/app/api/: __init__.py
src/backend/app/api/v1/: __init__.py  routes.py
src/backend/app/api/v1/endpoints/: __init__.py  accounts.py  auth.py  budgets.py  goals.py  investments.py  transactions.py  users.py
src/backend/app/core/: __init__.py  auth.py  cache.py  config.py  encryption.py  errors.py  events.py  logging.py  security.py  websockets.py
src/backend/app/db/: __init__.py  base.py  session.py
src/backend/app/db/migrations/: __init__.py  env.py  script.py.mako
src/backend/app/models/: __init__.py  account.py  budget.py  category.py  goal.py  investment.py  transaction.py  user.py
src/backend/app/schemas/: __init__.py  account.py  auth.py  budget.py  category.py  goal.py  investment.py  transaction.py  user.py
src/backend/app/services/: __init__.py  account_service.py  auth_service.py  budget_service.py  goal_service.py  investment_service.py  notification_service.py  plaid_service.py  s3_service.py  sync_service.py  transaction_service.py  user_service.py
src/backend/app/utils/: __init__.py  crypto.py  datetime.py  decorators.py  email.py  pagination.py  security.py  validators.py
src/backend/tests/: __init__.py  conftest.py
src/backend/tests/test_api/: __init__.py  test_accounts.py  test_auth.py  test_budgets.py  test_goals.py  test_investments.py  test_transactions.py  test_users.py
src/backend/tests/test_core/: __init__.py  test_auth.py  test_cache.py  test_encryption.py  test_security.py
src/backend/tests/test_models/: __init__.py  test_account.py  test_budget.py  test_goal.py  test_investment.py  test_transaction.py  test_user.py
src/backend/tests/test_services/: __init__.py  test_account_service.py  test_auth_service.py  test_budget_service.py  test_goal_service.py  test_investment_service.py  test_notification_service.py  test_plaid_service.py  test_sync_service.py  test_transaction_service.py
src/backend/tests/test_utils/: __init__.py  test_crypto.py  test_datetime.py  test_validators.py
src/ios/: .gitignore  .swiftlint.yml  Podfile  README.md
src/web/: .eslintrc.js  .gitignore  README.md  app.json  babel.config.js  index.android.js  index.web.js  jest.config.js  metro.config.js  package.json  tsconfig.json
(+278 files in other folders)
